# RAGgy

./: .gitignore  ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PLAN.md  README.md  ROADMAP.md  SECURITY.md
.claude/: settings.local.json
src/: config.rs  init.rs  lib.rs  main.rs  mcp.rs  serve.rs  watch.rs  workspace.rs
src/entity/: gliner.rs  mod.rs  regex.rs  resolution.rs
src/extractors/: csv_extract.rs  html.rs  markdown.rs  mod.rs  pdf.rs  plaintext.rs
src/graph/: mod.rs  store.rs  traverse.rs
src/index/: embedder.rs  fulltext.rs  metadata.rs  mod.rs  tfidf.rs  vector.rs
src/ingest/: code.rs  markdown.rs  mod.rs  plaintext.rs  structured.rs
src/query/: mod.rs  parser.rs  plan.rs
src/retrieval/: ranker.rs
tests/: integration.rs
ui/: README.md  index.html  styles.css
