[package]
name = "raggy"
version = "0.1.0"
edition = "2021"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Search
tantivy = "0.22"

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Graph
petgraph = "0.6"

# Parsing
pulldown-cmark = "0.11"
tree-sitter = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-python = "0.23"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"

# Entity extraction
regex = "1"
lazy_static = "1"

# File content extraction
pdf-extract = "0.7"
csv = "1"

# File handling
walkdir = "2"
ignore = "0.4"
sha2 = "0.10"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Serialization
bincode = "1"

# Output
colored = "2"

# Embeddings (ONNX Runtime)
ort = { version = "2.0.0-rc.12", features = ["download-binaries"] }
tokenizers = { version = "0.22", default-features = false, features = ["fancy-regex"] }
ndarray = "0.16"

# Vector search (HNSW)
instant-distance = "0.6"

# HTTP server
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
base64 = "0.22"

# Signal handling
ctrlc = "3"

# Init / model download
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
indicatif = "0.17"
dirs = "5"

# File watching
notify = "6"
notify-debouncer-mini = "0.3"

# Error handling
anyhow = "1"
thiserror = "1"

# Optimize dependencies even in debug builds (critical for ONNX/tokenizer speed)
[profile.dev.package."*"]
opt-level = 2
